Arc - Map feature push 1

--- a/client/.gitignore
+++ b/client/.gitignore
@@ -41,4 +41,8 @@ testem.log
 .DS_Store
 Thumbs.db
 
+# Ignore environment files with sensitive data
+src/environments/environment.ts
+src/environments/environment.prod.ts
+
 .env
